# AgeOfWar

./: CMakeLists.txt  Makefile  main.cpp
src/game/: Board.cpp  Board.hpp  BuyingManager.cpp  BuyingManager.hpp  CombatLogger.cpp  CombatLogger.hpp  Game.cpp  Game.hpp  GameLogger.cpp  GameLogger.hpp  GameManager.cpp  GameManager.hpp  UnitFactory.cpp  UnitFactory.hpp
src/game/actions/: ActionAttack.cpp  ActionAttack.hpp  ActionMove.cpp  ActionMove.hpp  ActionNone.cpp  ActionNone.hpp  IAction.cpp  IAction.hpp
src/players/: Base.cpp  Base.hpp  ComputerPlayer.cpp  ComputerPlayer.hpp  HumanPlayer.cpp  HumanPlayer.hpp  IPlayer.cpp  IPlayer.hpp
src/units/: Archer.cpp  Archer.hpp  Catapult.cpp  Catapult.hpp  Fantassin.cpp  Fantassin.hpp  IAttackable.cpp  IAttackable.hpp  IAttacking.cpp  IAttacking.h  IAttacking.hpp  IBaseUnit.cpp  IBaseUnit.hpp  IPurchasable.cpp  IPurchasable.h  IUnit.cpp  IUnit.hpp  SuperSoldier.cpp  SuperSoldier.hpp
src/utility/: ConsoleHelper.cpp  ConsoleHelper.hpp  Helper.cpp  Helper.hpp  IDrawable.cpp  IDrawable.hpp
